[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Enemies/Squirrel-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enemies/Squirrel.gd" type="Script" id=2]
[ext_resource path="res://Characters/Enemies/Acorn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.12732, 5.54942 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Sniff"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Throw"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 41.75
height = 80.7999

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6.37601, 6.52619 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 47.25
height = 131.5

[node name="Squirrel" type="KinematicBody2D"]
z_index = 1
collision_layer = 16
script = ExtResource( 2 )
acorn = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2.4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )
anims/Sniff = SubResource( 4 )
anims/Throw = SubResource( 5 )

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
rotation = 1.5708
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="RemovalTimer" type="Timer" parent="."]

[node name="PlayerAttackZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerAttackZone" index="0"]
rotation = 1.5708
shape = SubResource( 8 )

[node name="AttackReset" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="RemovalTimer" to="." method="_on_RemovalTimer_timeout"]
[connection signal="timeout" from="AttackReset" to="." method="_on_AttackReset_timeout"]

[editable path="PlayerDetectionZone"]

[editable path="Hurtbox"]

[editable path="PlayerAttackZone"]
